fixed alignment

--- a/css/Recipes.css
+++ b/css/Recipes.css
@@ -9,9 +9,12 @@
 }
 
 .portrait {
-  display: block;
   max-width: 400px;
   max-height:400px;
   width: auto;
   height: auto;
+}
+
+h1,h2 {
+	max-width: 600px;
 }
